--- a/Unknown.Editor.csproj
+++ b/Unknown.Editor.csproj
@@ -5,16 +5,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1CDD1CC9-6219-E95D-3551-7CBF22642E33}</ProjectGuid>
+    <ProjectGuid>{F0C1DF68-BB22-D9AB-741D-12BFC899F46A}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>Assembly-CSharp</AssemblyName>
+    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
-    <UnityProjectType>Game:1</UnityProjectType>
+    <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.3.0f3</UnityVersion>
     <RootNamespace></RootNamespace>
@@ -282,13 +282,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\CameraFollow.cs" />
-    <Compile Include="Assets\Scripts\Controller.cs" />
-    <Compile Include="Assets\Scripts\EnemyController.cs" />
-    <Compile Include="Assets\Scripts\Load.cs" />
-    <Compile Include="Assets\Scripts\PlayerLevel.cs" />
-    <Compile Include="Assets\Scripts\Quit.cs" />
-    <Compile Include="Assets\Scripts\Spawner.cs" />
+    <ProjectReference Include="Unknown.csproj">
+      <Project>{1CDD1CC9-6219-E95D-3551-7CBF22642E33}</Project>
+      <Name>Unknown</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Assets\Editor\ContainClip.cs" />
+    <Compile Include="Assets\Editor\RenameAssets.cs" />
+    <Compile Include="Assets\Editor\Sprite Animation Preview\OverrideEditor.cs" />
+    <Compile Include="Assets\Editor\Sprite Animation Preview\SpriteAnimationClipEditor.cs" />
+    <Compile Include="Assets\Editor\Sprite Animation Preview\SpriteAnimationTimeControl.cs" />
+    <Compile Include="Assets\Editor\Sprite Animation Preview\TimeControl.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
