Added: shop, menu. Fixed: Exp slider. NeedsFix: Hp slider

--- a/Death.csproj
+++ b/Death.csproj
@@ -84,6 +84,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\AddDamage.cs" />
+    <Compile Include="Assets\Scripts\AddHealth.cs" />
     <Compile Include="Assets\Scripts\CameraFollow.cs" />
     <Compile Include="Assets\Scripts\Controller.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
@@ -92,6 +94,7 @@
     <Compile Include="Assets\Scripts\PlayerLevel.cs" />
     <Compile Include="Assets\Scripts\Quit.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
+    <Compile Include="Assets\Scripts\Unpause.cs" />
     <Compile Include="Assets\Scripts\Weapon.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
